week 8. 설명을 자연어로 생성하는 LLM을 활용해 보기